--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.env
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
