--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-accessible-accordion": "^4.0.0",
     "react-circular-progressbar": "^2.0.4",
